--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-html {
+html, body {
+  padding: 0;
+  margin: 0;
+}
+#photo {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  display: block;
 }
 #photoCredit {
   position: absolute;
